fixed text overlap and a button padding

--- a/customer/src/HomePage/Main.css
+++ b/customer/src/HomePage/Main.css
@@ -108,14 +108,15 @@
     float: left;
     width: 30%;
     height: 100%;
-    padding: 25px;
+    padding: 20px;
 }
 
 .map-item {
     margin-bottom: 5px;
     position: relative;
     margin-top: 5px;
-    padding: 15px;
+    padding: 12px;
+    padding-left: 2px;
     border-top: 1px #A07D50 solid;
 }
 
@@ -128,7 +129,7 @@
 }
 
 .list-location {
-    font-size: 12pt;
+    font-size: 10pt;
     color: #6a4c25;
     display: inline;
 }
@@ -137,7 +138,7 @@
     display: inline;
     position: absolute;
     right: 0px;
-    font-size: 12pt;
+    font-size: 10pt;
 
 
 }
@@ -219,6 +220,12 @@ div.modal-content{
 
 
 @media (max-width:800px) {
+    .section{
+        margin-left: 8%;
+        margin-right: 8%;
+    }
+
+
     .col-menu img {
         width: 25%
     }
@@ -300,7 +307,7 @@ div.modal-content{
         float: left;
         width: 100%;
         height: 100%;
-        padding: 25px;
+        padding: 18px;
         margin-bottom: 0;
     }
 
